run as monolith + api spec gen fix + adding init + local db fix
